feat: add connection test button and disable service worker

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
             
             <div class="controls">
                 <button id="connectBtn" class="btn-connect">Connect</button>
+                <button id="connectTestBtn" class="btn-connect">Connect Test</button>
             </div>
             
             <div class="status-indicators">
@@ -252,6 +253,7 @@
             });
         }
 
+        /*
         // Регистрация service worker
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
@@ -264,6 +266,7 @@
                     });
             });
         }
+        */
     </script>
 </body>
 </html>
