--- a/index.html
+++ b/index.html
@@ -232,6 +232,9 @@
                 <audio id="localAudio" muted></audio>
                 <audio id="remoteAudio"></audio>
             </div>
+            
+            <!-- Log output -->
+            <div id="logOutput" style="margin-top: 20px; padding: 10px; background-color: #f0f0f0; border-radius: 5px; max-height: 200px; overflow-y: auto; font-size: 0.8em;"></div>
         </main>
     </div>
 
