--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     <span id="userIdDisplay">generating...</span>
                     <button class="copy-btn" onclick="copyUserId()">Copy</button>
                 </div>
-            
+            </div>
             <div class="form-group">
                 <label for="partnerId">Partner ID</label>
                 <input type="text" id="partnerId" placeholder="Enter partner's ID">
@@ -216,6 +216,10 @@
                     <span>●</span>
                     <span>Connection: <span id="connectionStatusText">Disconnected</span></span>
                 </div>
+                <div class="indicator" id="roomStatus">
+                    <span>●</span>
+                    <span>Room: <span id="roomStatusText">Not in room</span></span>
+                </div>
                 <div class="indicator" id="latencyIndicator">
                     <span>●</span>
                     <span>Latency: <span id="latencyValue">-- ms</span></span>
@@ -258,6 +262,24 @@
 
         /*
         // Регистрация service worker
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/service-worker.js')
+                    .then((registration) => {
+                        console.log('SW зарегистрирован: ', registration.scope);
+                    })
+                    .catch((error) => {
+                        console.log('Ошибка регистрации SW: ', error);
+                    });
+            });
+        }
+        */
+    </script>
+    
+    <script>
+        // Disable service worker registration
+        // Commented out to prevent interference with testing
+        /*
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
                 navigator.serviceWorker.register('/service-worker.js')
