--- a/index.html
+++ b/index.html
@@ -276,22 +276,6 @@
         */
     </script>
     
-    <script>
-        // Disable service worker registration
-        // Commented out to prevent interference with testing
-        /*
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/service-worker.js')
-                    .then((registration) => {
-                        console.log('SW зарегистрирован: ', registration.scope);
-                    })
-                    .catch((error) => {
-                        console.log('Ошибка регистрации SW: ', error);
-                    });
-            });
-        }
-        */
-    </script>
+    <!-- Service Worker registration commented out to prevent interference with testing -->
 </body>
 </html>
