Add configuration file for backend WebSocket URL to fix connection issue

--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
         </main>
     </div>
 
+    <script src="config.js"></script>
     <script src="app.js"></script>
     <script>
         // Initialize user ID field with a suggestion
